<resources>
    <string name="app_name">"Лёгкий бюджет"</string>
    <string name="v_money">"Сумма"</string>
    <string name="v_category">"Категория"</string>
    <string name="v_add">"Доход"</string>
    <string name="v_sub">"Расход"</string>
    <string name="v_date">"Дата"</string>
    <string name="categoty_food">"Еда"</string>
    <string name="categoty_flat">"За квартиру"</string>
    <string name="categoty_transport">"Транспорт"</string>
    <string name="categoty_fun">"Развлечения"</string>
    <string name="categoty_clothes">"Одежда"</string>
    <string name="categoty_whithout">"без категории"</string>
    <string name="input_add">"Добавить приход"</string>
    <string name="input_sub">"Добавить расход"</string>
    <string name="btn_input">"Добавить"</string>
    <string name="btn_showOrHide">"Отобразить/Спрятать"</string>
    <string name="btn_clear">"Очистить"</string>
    <string name="btn_context_edit">"Редактировать"</string>
    <string name="btn_context_copy">"Копировать"</string>
    <string name="btn_context_delete">"Удалить"</string>
    <string name="btn_context_back">"Назад"</string>
    <string name="action_settings">Настройки</string>
    <string name="edit_btn">Изменить</string>
    <string name="menu_btn">меню</string>
    <string name="add_category">Добавить категорию</string>
    <string name="btnMain">Главная</string>
    <string name="btnRealBalance">Реальный баланс</string>
    <string name="tvRealStateOfBalanse">Введите актуальное значение баланса</string>
</resources>
